update some docs.
